hphp/test/zend/good/ext-xml/bug43957.php
<?php
  echo utf8_decode('abc'.chr(0xe0));
?>