hphp/test/zend/bad/Zend/tests/class_alias_006.php
<?php

class_alias('stdclass', 'foo');

?>